@@ -35,12 +35,6 @@ set weak_regexp_big \
 set weak_regexp_little \
 ".*Contents of section .text:.*1000 08100000 0c200000 12121212 34343434.*Contents of section .data:.*2000 08100000 0c200000 56565656 78787878.*"
 
-# hppa-elf needs a definition for $global$.
-set flags ""
-if [istarget hppa*-*-*] {
-    set flags "--defsym \\\$global\\\$=0"
-}
-
 if {! [ld_simple_link $ld tmpdir/weak "$flags -T $srcdir/$subdir/weak.t tmpdir/weak1.o tmpdir/weak2.o"] } then {
     fail $testname
 } else {
